fixed background visibility

--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ p {
   .registration-section {
     padding: 0;
     padding-left: 208px;
-    background-image: url("../../../img/bg-tablet@x2.jpg");
+    background-image: url("../img/bg-tablet@x2.jpg");
     background-position: left;
     background-size: cover;
   }
@@ -205,7 +205,7 @@ p {
 
 @media screen and (min-width: 1280px) {
   .registration-section {
-    background-image: url("../../../img/bg-desktop@x2.jpg");
+    background-image: url("../img/bg-desktop@x2.jpg");
   }
   .registration-form {
     width: 560px;
@@ -216,7 +216,7 @@ p {
 
 .login-section {
   padding-top: 72px;
-  background-image: url("../../../img/bg-mobile@x2.jpg");
+  background-image: url("../img/bg-mobile@x2.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top center;
@@ -351,7 +351,7 @@ p {
   .login-section {
     padding: 0;
     padding-left: 208px;
-    background-image: url("../../../img/bg-tablet-login@x2.jpg");
+    background-image: url("../img/bg-tablet-login@x2.jpg");
     background-position: left;
   }
   .login-form {
@@ -409,7 +409,7 @@ p {
 
 @media screen and (min-width: 1280px) {
   .login-section {
-    background-image: url("../../../img/bg-desktop@x2.jpg");
+    background-image: url("../img/bg-desktop@x2.jpg");
   }
   .login-form {
     width: 560px;
@@ -420,7 +420,7 @@ p {
 
 .restore-section {
   padding-top: 72px;
-  background-image: url("../../../img/bg-mobile@x2.jpg");
+  background-image: url("../img/bg-mobile@x2.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top center;
@@ -573,7 +573,7 @@ p {
   .restore-section {
     padding: 0;
     padding-left: 208px;
-    background-image: url("../../../img/bg-tablet-login@x2.jpg");
+    background-image: url("../img/bg-tablet-login@x2.jpg");
     background-position: left;
   }
   .restore-form {
@@ -635,7 +635,7 @@ p {
 
 @media screen and (min-width: 1280px) {
   .restore-section {
-    background-image: url("../../../img/bg-desktop@x2.jpg");
+    background-image: url("../img/bg-desktop@x2.jpg");
   }
   .restore-form {
     width: 560px;
