--- a/sass/components/login/_login.scss
+++ b/sass/components/login/_login.scss
@@ -1,6 +1,6 @@
 .login-section {
   padding-top: 72px;
-  background-image: url('../../../img/bg-mobile@x2.jpg');
+  background-image: url('../img/bg-mobile@x2.jpg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top center;
@@ -141,7 +141,7 @@
   .login-section {
     padding: 0;
     padding-left: 208px;
-    background-image: url('../../../img/bg-tablet-login@x2.jpg');
+    background-image: url('../img/bg-tablet-login@x2.jpg');
     background-position: left;
   }
 
@@ -215,7 +215,7 @@
 
 @media screen and (min-width: 1280px) {
   .login-section {
-    background-image: url('../../../img/bg-desktop@x2.jpg');
+    background-image: url('../img/bg-desktop@x2.jpg');
   }
 
   .login-form {
