--- a/sass/components/registration/_registration.scss
+++ b/sass/components/registration/_registration.scss
@@ -125,7 +125,7 @@
   .registration-section {
     padding: 0;
     padding-left: 208px;
-    background-image: url('../../../img/bg-tablet@x2.jpg');
+    background-image: url('../img/bg-tablet@x2.jpg');
     background-position: left;
     background-size: cover;
   }
@@ -193,7 +193,7 @@
 
 @media screen and (min-width: 1280px) {
   .registration-section {
-    background-image: url('../../../img/bg-desktop@x2.jpg');
+    background-image: url('../img/bg-desktop@x2.jpg');
   }
 
   .registration-form {
