--- a/sass/components/restore/_restore.scss
+++ b/sass/components/restore/_restore.scss
@@ -1,6 +1,6 @@
 .restore-section {
   padding-top: 72px;
-  background-image: url('../../../img/bg-mobile@x2.jpg');
+  background-image: url('../img/bg-mobile@x2.jpg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top center;
@@ -159,7 +159,7 @@
   .restore-section {
     padding: 0;
     padding-left: 208px;
-    background-image: url('../../../img/bg-tablet-login@x2.jpg');
+    background-image: url('../img/bg-tablet-login@x2.jpg');
     background-position: left;
   }
 
@@ -236,7 +236,7 @@
 
 @media screen and (min-width: 1280px) {
   .restore-section {
-    background-image: url('../../../img/bg-desktop@x2.jpg');
+    background-image: url('../img/bg-desktop@x2.jpg');
   }
 
   .restore-form {
